# emul8

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
c8d/: Cargo.toml
c8d/src/: main.rs
decoder/: Cargo.toml
decoder/src/: lib.rs
instruction_emulator/: Cargo.toml
instruction_emulator/src/: lib.rs
src/: fonts.rs  keyboard.rs  main.rs  memory.rs  screen.rs
